Fix bug #67988.  Fix focus problems in mail/news.  Don't always grab the gtk widget when someone requests focus...after all it's just a request.  This also might fix bug #68004. r=bryer,saari sr=shaver